[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Actors/Creature.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Stats.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/HitBox.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/HurtBox.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 13.5 )

[node name="Creature" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="Stats" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2( -7, 0 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 4

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 4

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]

[node name="knockback_timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="knockback_timer" to="." method="_on_knockback_timer_timeout"]
